# demographic-inference

./: .gitignore  QUICKSTART.md  README.md  TRAINER_REFACTORING.md  config_examples.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/config/: __init__.py  config.py
src/training/: __init__.py  causal_language_model_trainer.py  modernbert_trainer.py  sequence_classification_trainer.py
src/utils/: __init__.py  data_utils.py  metrics.py
